[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/button_blue/button_blue.tres" type="Theme" id=1]
[ext_resource path="res://assets/ui/button_yellow/button_yellow.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/fonts/font_small_button.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/button_red/button_red.tres" type="Theme" id=4]
[ext_resource path="res://assets/ui/fonts/data/kenney_thick.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/editor_menu/map_item/map_item.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/fonts/data/kenney_pixel_square.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[node name="MapItem" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -383.0
margin_bottom = -544.0
size_flags_vertical = 0
split_offset = 296
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 5.0
margin_right = 333.0
margin_bottom = 51.0
size_flags_vertical = 4

[node name="LblName" type="Label" parent="VBoxContainer"]
margin_right = 333.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "Map Name here"
valign = 1

[node name="LblId" type="Label" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 333.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = SubResource( 2 )
text = "ID 20318"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 345.0
margin_right = 641.0
margin_bottom = 56.0
size_flags_vertical = 0

[node name="BtnPractice" type="Button" parent="HBoxContainer"]
margin_right = 110.0
margin_bottom = 56.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Practice"

[node name="BtnEditMap" type="Button" parent="HBoxContainer"]
margin_left = 114.0
margin_right = 200.0
margin_bottom = 56.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Editor"

[node name="BtnDelete" type="Button" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 296.0
margin_bottom = 56.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Delete"

[connection signal="pressed" from="HBoxContainer/BtnPractice" to="." method="_on_BtnPractice_pressed"]
[connection signal="pressed" from="HBoxContainer/BtnEditMap" to="." method="_on_BtnEditMap_pressed"]
[connection signal="pressed" from="HBoxContainer/BtnDelete" to="." method="_on_BtnDelete_pressed"]
